src/objects/Service_Provider_Drawdown__c.object
<CustomObject>
    <fields>
        <fullName>Accrued_Interest__c</fullName>
        <label>Accrued Interest</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CHQ__c</fullName>
        <label>CHQ #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drawdown_Date__c</fullName>
        <label>Drawdown Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EFT__c</fullName>
        <label>EFT #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Id__c</fullName>
        <description>Used for migration purposes</description>
        <formula>Opportunity_Service_Provider_MD__r.Opportunity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Service_Provider_MD__c</fullName>
        <label>Opportunity Service Provider</label>
        <referenceTo>Opportunity_Service_Provider__c</referenceTo>
        <relationshipLabel>Service Provider Drawdowns</relationshipLabel>
        <relationshipName>Service_Provider_Drawdowns1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Outstanding_Balance__c</fullName>
        <label>Outstanding Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <label>Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Admin Fee</fullName>
                </value>
                <value>
                    <fullName>Bad Debt</fullName>
                </value>
                <value>
                    <fullName>Cheque</fullName>
                </value>
                <value>
                    <fullName>e-Transfer</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Payment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Per_Diem__c</fullName>
        <label>Per Diem</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reference_Notes__c</fullName>
        <label>Reference / Notes</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Payment_Method__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Admin Fee</fullName>
                </value>
                <value>
                    <fullName>Admin Fee charged up front</fullName>
                </value>
                <value>
                    <fullName>Bad Debt</fullName>
                </value>
                <value>
                    <fullName>EFT Reject</fullName>
                </value>
                <value>
                    <fullName>EFT Reprocessed</fullName>
                </value>
                <value>
                    <fullName>EFT to Client</fullName>
                </value>
                <value>
                    <fullName>Fee</fullName>
                </value>
                <value>
                    <fullName>Loan Payout</fullName>
                </value>
                <value>
                    <fullName>Other Fee</fullName>
                </value>
                <value>
                    <fullName>Partial Payment</fullName>
                </value>
                <value>
                    <fullName>Payment Rejected</fullName>
                </value>
                <value>
                    <fullName>Payment Re-processed</fullName>
                </value>
                <value>
                    <fullName>Payment Shortfall</fullName>
                </value>
                <value>
                    <fullName>Payment Surplus</fullName>
                </value>
                <value>
                    <fullName>Payment to Client</fullName>
                    <label>Payment to client</label>
                </value>
                <value>
                    <fullName>Payment to Lawyer</fullName>
                </value>
                <value>
                    <fullName>Payment to other lender</fullName>
                </value>
                <value>
                    <fullName>Payment to Third-Party</fullName>
                </value>
                <value>
                    <fullName>Payment to Treatment - Service Provider</fullName>
                </value>
                <value>
                    <fullName>Referral Fee</fullName>
                </value>
                <value>
                    <fullName>Waived Fee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Provider_Allowed_Balance__c</fullName>
        <formula>Opportunity_Service_Provider_MD__r.Allowance_Balance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Provider Allowed Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Service Provider Drawdown</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Amount__c</columns>
        <columns>Drawdown_Date__c</columns>
        <columns>Payment_Method__c</columns>
        <columns>Reference_Notes__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SPDD - {00000}</displayFormat>
        <label>SPDD Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Provider Drawdowns</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>SPD_Total_Balance_Check</fullName>
        <active>true</active>
        <description>Total Drawdowns cannot be greater than Service Provider allowance</description>
        <errorConditionFormula>AND(
ISCHANGED(Amount__c),
Amount__c &gt; Service_Provider_Allowed_Balance__c
)</errorConditionFormula>
        <errorMessage>This Service Provider Drawdown record cannot be saved as it will exceed the Service Provider Allowance.</errorMessage>
    </validationRules>
</CustomObject>